--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 <div class='container-fluid'>
   <div class='row py-4'>
     <content class='content col-sm-12 col-md-12'>
-      <next-fixtures-container></next-fixtures-container>
+      <app-next-fixtures-container></app-next-fixtures-container>
     </content>
   </div>
 </div>
