feat(NextFixture):added 1x2 prdiction

--- a/src/app/components/containers/next-fixtures/next-fixtures.component.html
+++ b/src/app/components/containers/next-fixtures/next-fixtures.component.html
@@ -1,12 +1,5 @@
-<div class='next-fixtures-container'>
-  <div *ngFor="let nextFixture of nextFixtures$ | async; let i = index">
-    <br/>
-    Date: {{ nextFixture.date }}
-    <br/>
-    Leauge: {{ nextFixture.leauge }}
-    <br/>
-    Home Team: {{ nextFixture.homeTeam.name }}
-    <br/>
-    Away Team: {{ nextFixture.awayTeam.name }}
+<div class="container-fluid">
+  <div class='next-fixtures-container' class="row">
+    <next-fixture *ngFor="let nextFixture of nextFixtures$ | async; let i = index" [fixture]="nextFixture" (resultSelected)="resultSelected($event)" class="col-sm"></next-fixture>
   </div>
 </div>
