feat(App):layout+login+firebase

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<div class='container-fluid'>
-  <div class='row py-4'>
-    <content class='content col-sm-12 col-md-12'>
-      <app-next-fixtures-container></app-next-fixtures-container>
-    </content>
-  </div>
-</div>
+<router-outlet></router-outlet>
