feat(App):use client api (firestore) as backend

--- a/src/app/components/widgets/fixture-team/fixture-team.component.html
+++ b/src/app/components/widgets/fixture-team/fixture-team.component.html
@@ -1,6 +1,6 @@
 <div class="fixture-team text-center">
-    <div class="team-img">
-      <img [src]="team.logoUrl">
+    <div>
+      <img class="team-img" [src]="team.logoUrl">
     </div>
     <div class="team-name pt-2">
       <label class="font-weight-bold">{{ team.name }}</label>
